# Selene-OS

./: .gitignore  AGENTS.md  CODEX_LAW.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  builder_change_brief_template.md  builder_permission_template.env
crates/selene_adapter/: Cargo.toml  README.md  build.rs
crates/selene_adapter/.dev/: builder_change_brief.md  builder_code_decision.env  builder_launch_decision.env  builder_learning_report.md  builder_permission_packet.md  ph1c_live_telemetry.csv  ph1k_live_eval_snapshot.csv
crates/selene_adapter/proto/: voice_ingress.proto
crates/selene_adapter/src/: desktop_mic_producer.rs  lib.rs
crates/selene_adapter/src/web/: app.css  app.html  app.js
crates/selene_adapter/tests/: desktop_capture_bundle_valid.rs
crates/selene_os/: Cargo.toml
crates/selene_os/src/: app_ingress.rs  device_artifact_sync.rs  lib.rs  ph1_voice_id.rs  ph1bcast.rs  ph1builder.rs  ph1c.rs  ph1c_superiority.rs  ph1cache.rs  ph1capreq.rs  ph1comp.rs  ph1context.rs  ph1cost.rs  ph1d.rs  ph1delivery.rs  ph1diag.rs  ph1doc.rs  ph1e.rs  ph1emocore.rs  ph1emoguide.rs  ph1endpoint.rs  ph1explain.rs  ph1export.rs  ph1f.rs  ph1feedback.rs  ph1gov.rs  ph1health.rs  ph1j.rs  ph1k.rs  ph1kg.rs  ph1kms.rs  ph1know.rs  ph1l.rs  ph1lang.rs  ph1learn.rs  ph1lease.rs  ph1link.rs  ph1listen.rs  ph1m.rs  ph1multi.rs  (+35 more)
crates/selene_os/src/web_search_plan/: contract_hash.rs  idempotency_validator.rs  mod.rs  packet_validator.rs  reason_code_validator.rs  registry_loader.rs  tests.rs  turn_state_machine_validator.rs
crates/selene_storage/: Cargo.toml
crates/selene_storage/migrations/: 0001_ph1f_foundation.sql  0002_work_orders_core.sql  0003_pbs_tables.sql  0004_simulation_catalog_tables.sql  0005_engine_capability_maps_tables.sql  0006_artifacts_ledger_and_tool_cache.sql  0007_ph1l_sessions_indexes.sql  0008_ph1vid_voice_enrollment_tables.sql  0009_access_instance_tables.sql  0010_ph1k_audio_runtime_tables.sql  0011_ph1w_wake_tables.sql  0012_ph1link_onboarding_draft_tables.sql  0013_capreq_tables.sql  0014_position_requirements_schema_and_backfill_tables.sql  0015_access_master_schema_tables.sql  0016_access_ap_authoring_review_tables.sql  0017_builder_selene_pipeline_tables.sql  0018_builder_selene_approval_release_tables.sql  0019_builder_selene_post_deploy_judge_tables.sql  0020_builder_selene_learning_bridge_fields.sql  0021_ph1m_vnext_memory_tables.sql  0022_self_heal_cards_tables.sql  0023_ph1k_interrupt_extended_fields.sql  0024_wake_artifact_apply_state.sql  0025_wake_learn_signal_outbox.sql  0026_stage7_internal_history_evidence.sql
crates/selene_storage/src/: lib.rs  ph1f.rs  ph1j.rs  repo.rs
crates/selene_storage/tests/artifacts_ledger/: db_wiring.rs
crates/selene_storage/tests/engine_capability_maps/: db_wiring.rs
crates/selene_storage/tests/os_core/: db_wiring.rs
crates/selene_storage/tests/pbs/: db_wiring.rs
crates/selene_storage/tests/ph1_access_ph2_access/: db_wiring.rs
crates/selene_storage/tests/ph1_c/: db_wiring.rs
crates/selene_storage/tests/ph1_capreq/: db_wiring.rs
crates/selene_storage/tests/ph1_d/: db_wiring.rs
crates/selene_storage/tests/ph1_e/: db_wiring.rs
crates/selene_storage/tests/ph1_f/: db_wiring.rs
crates/selene_storage/tests/ph1_j/: db_wiring.rs
crates/selene_storage/tests/ph1_k/: db_wiring.rs
crates/selene_storage/tests/ph1_l/: db_wiring.rs
crates/selene_storage/tests/ph1_learn_feedback_know/: db_wiring.rs
crates/selene_storage/tests/ph1_link/: db_wiring.rs
crates/selene_storage/tests/ph1_m/: db_wiring.rs
crates/selene_storage/tests/ph1_nlp/: db_wiring.rs
crates/selene_storage/tests/ph1_onb/: db_wiring.rs
crates/selene_storage/tests/ph1_persona/: db_wiring.rs
crates/selene_storage/tests/ph1_position/: db_wiring.rs
(+1356 files in other folders)
