[package]
name = "selene_adapter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
selene_kernel_contracts = { path = "../selene_kernel_contracts" }
selene_os = { path = "../selene_os" }
selene_storage = { path = "../selene_storage" }
selene_engines = { path = "../selene_engines" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "selene_adapter_http"
path = "src/bin/http_adapter.rs"

[[bin]]
name = "selene_adapter_grpc"
path = "src/bin/grpc_adapter.rs"
