[package]
name = "selene_os"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
selene_kernel_contracts = { path = "../selene_kernel_contracts" }
selene_engines = { path = "../selene_engines" }
selene_storage = { path = "../selene_storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ureq = "2"
flate2 = "1"
brotli = "3"
encoding_rs = "0.8"
unicode-normalization = "0.1"
url = "2"
lopdf = "0.32"
rust_decimal = "1"
